--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css"> <!-- Link de referência do Style -->
+    <link rel="stylesheet" href="CSS/style.css"> <!-- Link de referência do Style -->
 </head>
 <body>
     <section>
         <img src="images.jpeg" alt="Imagem de Estudo" width="600px" height="400px" />
         <div class="content">
             <h1 class="title">Curso Introdução Desenvolvimento Web</h1>
-            <h2 class="subtitle">Bem vindo, Henrique</h2>
+            <h2 class="subtitle" id="result"></h2>
         </div>
         <input placeholder="Seu nome" name="name" id="name" />
-        <button class="primazy">Entrar</button>
-        <button class="Secondary">Sair</button>
+        <button class="primary" onclick="getValue()">Entrar</button>
+        <button class="secondary" >Sair</button>
     </section>
+    <script src="JS/script.js"></script> <!-- Quando o navegdor for renderizar todos os arquivos, ele principalmente derr razão para o JS. -->
 </body>
 </html>
