Melhorias a cada dia de aprendizagem no Bootcamp.
- O uso das tags HTML5.
- Criação de tabelas.
- Inserindo imagens.

--- a/site1/index.html
+++ b/site1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,7 +16,7 @@
         </div>
         <input placeholder="Seu nome" name="name" id="name" />
         <button class="primary" onclick="getValue()">Entrar</button>
-        <button class="secondary" >Sair</button>
+        <button class="secondary" onclick="removeValue()">Sair</button>
     </section>
     <script src="JS/script.js"></script> <!-- Quando o navegdor for renderizar todos os arquivos, ele principalmente derr razão para o JS. -->
 </body>
